src/com/lowereast/guiceymongo/data/parser/GuiceyDataParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 GuiceyData.g 2010-04-18 05:28:18

package com.lowereast.guiceymongo.data.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class GuiceyDataParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DATA", "TYPE_MAP", "TYPE_SET", "TYPE_LIST", "TYPE_PRIMITIVE", "PROPERTY", "OPTION", "PAIR", "ENUM", "ID", "INT", "FLOAT", "STRING", "TYPE", "WS", "EXPONENT", "ESC_SEQ", "HEX_DIGIT", "UNICODE_ESC", "OCTAL_ESC", "'{'", "'}'", "'{}'", "','", "'['", "']'", "'('", "')]'", "'='", "'map<'", "'>'", "';'", "'set<'", "'list<'", "'data;'"
    };
    public static final int EXPONENT=19;
    public static final int OPTION=10;
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int UNICODE_ESC=22;
    public static final int OCTAL_ESC=23;
    public static final int HEX_DIGIT=21;
    public static final int FLOAT=15;
    public static final int INT=14;
    public static final int TYPE_LIST=7;
    public static final int ID=13;
    public static final int EOF=-1;
    public static final int TYPE_PRIMITIVE=8;
    public static final int TYPE=17;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int ESC_SEQ=20;
    public static final int WS=18;
    public static final int T__33=33;
    public static final int ENUM=12;
    public static final int T__34=34;
    public static final int TYPE_MAP=5;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int PROPERTY=9;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int TYPE_SET=6;
    public static final int PAIR=11;
    public static final int DATA=4;
    public static final int STRING=16;

    // delegates
    // delegators


        public GuiceyDataParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public GuiceyDataParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return GuiceyDataParser.tokenNames; }
    public String getGrammarFileName() { return "GuiceyData.g"; }


    public static class start_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "start"
    // GuiceyData.g:28:1: start : ( entry )+ EOF ;
    public final GuiceyDataParser.start_return start() throws RecognitionException {
        GuiceyDataParser.start_return retval = new GuiceyDataParser.start_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF2=null;
        GuiceyDataParser.entry_return entry1 = null;


        Object EOF2_tree=null;

        try {
            // GuiceyData.g:28:7: ( ( entry )+ EOF )
            // GuiceyData.g:28:9: ( entry )+ EOF
            {
            root_0 = (Object)adaptor.nil();

            // GuiceyData.g:28:9: ( entry )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==DATA||LA1_0==ENUM) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // GuiceyData.g:28:9: entry
            	    {
            	    pushFollow(FOLLOW_entry_in_start102);
            	    entry1=entry();

            	    state._fsp--;

            	    adaptor.addChild(root_0, entry1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_start105); 
            EOF2_tree = (Object)adaptor.create(EOF2);
            adaptor.addChild(root_0, EOF2_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "start"

    public static class entry_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "entry"
    // GuiceyData.g:31:1: entry : ( data | enumeration );
    public final GuiceyDataParser.entry_return entry() throws RecognitionException {
        GuiceyDataParser.entry_return retval = new GuiceyDataParser.entry_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        GuiceyDataParser.data_return data3 = null;

        GuiceyDataParser.enumeration_return enumeration4 = null;



        try {
            // GuiceyData.g:31:7: ( data | enumeration )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==DATA) ) {
                alt2=1;
            }
            else if ( (LA2_0==ENUM) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // GuiceyData.g:31:9: data
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_data_in_entry115);
                    data3=data();

                    state._fsp--;

                    adaptor.addChild(root_0, data3.getTree());

                    }
                    break;
                case 2 :
                    // GuiceyData.g:32:4: enumeration
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_enumeration_in_entry120);
                    enumeration4=enumeration();

                    state._fsp--;

                    adaptor.addChild(root_0, enumeration4.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "entry"

    public static class data_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "data"
    // GuiceyData.g:35:1: data : DATA type '{' ( data_entry )* '}' -> ^( DATA type ( data_entry )* ) ;
    public final GuiceyDataParser.data_return data() throws RecognitionException {
        GuiceyDataParser.data_return retval = new GuiceyDataParser.data_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token DATA5=null;
        Token char_literal7=null;
        Token char_literal9=null;
        GuiceyDataParser.type_return type6 = null;

        GuiceyDataParser.data_entry_return data_entry8 = null;


        Object DATA5_tree=null;
        Object char_literal7_tree=null;
        Object char_literal9_tree=null;
        RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
        RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
        RewriteRuleTokenStream stream_DATA=new RewriteRuleTokenStream(adaptor,"token DATA");
        RewriteRuleSubtreeStream stream_data_entry=new RewriteRuleSubtreeStream(adaptor,"rule data_entry");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // GuiceyData.g:35:6: ( DATA type '{' ( data_entry )* '}' -> ^( DATA type ( data_entry )* ) )
            // GuiceyData.g:35:8: DATA type '{' ( data_entry )* '}'
            {
            DATA5=(Token)match(input,DATA,FOLLOW_DATA_in_data130);  
            stream_DATA.add(DATA5);

            pushFollow(FOLLOW_type_in_data132);
            type6=type();

            state._fsp--;

            stream_type.add(type6.getTree());
            char_literal7=(Token)match(input,24,FOLLOW_24_in_data134);  
            stream_24.add(char_literal7);

            // GuiceyData.g:35:22: ( data_entry )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==DATA||(LA3_0>=ENUM && LA3_0<=ID)||LA3_0==TYPE||LA3_0==28||LA3_0==33||(LA3_0>=36 && LA3_0<=37)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // GuiceyData.g:35:22: data_entry
            	    {
            	    pushFollow(FOLLOW_data_entry_in_data136);
            	    data_entry8=data_entry();

            	    state._fsp--;

            	    stream_data_entry.add(data_entry8.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            char_literal9=(Token)match(input,25,FOLLOW_25_in_data139);  
            stream_25.add(char_literal9);



            // AST REWRITE
            // elements: type, DATA, data_entry
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 35:38: -> ^( DATA type ( data_entry )* )
            {
                // GuiceyData.g:35:41: ^( DATA type ( data_entry )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_DATA.nextNode(), root_1);

                adaptor.addChild(root_1, stream_type.nextTree());
                // GuiceyData.g:35:53: ( data_entry )*
                while ( stream_data_entry.hasNext() ) {
                    adaptor.addChild(root_1, stream_data_entry.nextTree());

                }
                stream_data_entry.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "data"

    public static class enumeration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "enumeration"
    // GuiceyData.g:38:1: enumeration : ( ENUM type '{}' -> ^( ENUM type ) | ENUM type '{' ( value_type ',' )* value_type '}' -> ^( ENUM type ( value_type )+ ) );
    public final GuiceyDataParser.enumeration_return enumeration() throws RecognitionException {
        GuiceyDataParser.enumeration_return retval = new GuiceyDataParser.enumeration_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ENUM10=null;
        Token string_literal12=null;
        Token ENUM13=null;
        Token char_literal15=null;
        Token char_literal17=null;
        Token char_literal19=null;
        GuiceyDataParser.type_return type11 = null;

        GuiceyDataParser.type_return type14 = null;

        GuiceyDataParser.value_type_return value_type16 = null;

        GuiceyDataParser.value_type_return value_type18 = null;


        Object ENUM10_tree=null;
        Object string_literal12_tree=null;
        Object ENUM13_tree=null;
        Object char_literal15_tree=null;
        Object char_literal17_tree=null;
        Object char_literal19_tree=null;
        RewriteRuleTokenStream stream_ENUM=new RewriteRuleTokenStream(adaptor,"token ENUM");
        RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
        RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleSubtreeStream stream_value_type=new RewriteRuleSubtreeStream(adaptor,"rule value_type");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // GuiceyData.g:39:2: ( ENUM type '{}' -> ^( ENUM type ) | ENUM type '{' ( value_type ',' )* value_type '}' -> ^( ENUM type ( value_type )+ ) )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==ENUM) ) {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==ID||LA5_1==TYPE) ) {
                    int LA5_2 = input.LA(3);

                    if ( (LA5_2==26) ) {
                        alt5=1;
                    }
                    else if ( (LA5_2==24) ) {
                        alt5=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 5, 2, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // GuiceyData.g:39:4: ENUM type '{}'
                    {
                    ENUM10=(Token)match(input,ENUM,FOLLOW_ENUM_in_enumeration161);  
                    stream_ENUM.add(ENUM10);

                    pushFollow(FOLLOW_type_in_enumeration163);
                    type11=type();

                    state._fsp--;

                    stream_type.add(type11.getTree());
                    string_literal12=(Token)match(input,26,FOLLOW_26_in_enumeration165);  
                    stream_26.add(string_literal12);



                    // AST REWRITE
                    // elements: ENUM, type
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 39:19: -> ^( ENUM type )
                    {
                        // GuiceyData.g:39:22: ^( ENUM type )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_ENUM.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_type.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // GuiceyData.g:40:4: ENUM type '{' ( value_type ',' )* value_type '}'
                    {
                    ENUM13=(Token)match(input,ENUM,FOLLOW_ENUM_in_enumeration178);  
                    stream_ENUM.add(ENUM13);

                    pushFollow(FOLLOW_type_in_enumeration180);
                    type14=type();

                    state._fsp--;

                    stream_type.add(type14.getTree());
                    char_literal15=(Token)match(input,24,FOLLOW_24_in_enumeration182);  
                    stream_24.add(char_literal15);

                    // GuiceyData.g:40:18: ( value_type ',' )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==ID||LA4_0==TYPE) ) {
                            int LA4_1 = input.LA(2);

                            if ( (LA4_1==27) ) {
                                alt4=1;
                            }


                        }


                        switch (alt4) {
                    	case 1 :
                    	    // GuiceyData.g:40:19: value_type ','
                    	    {
                    	    pushFollow(FOLLOW_value_type_in_enumeration185);
                    	    value_type16=value_type();

                    	    state._fsp--;

                    	    stream_value_type.add(value_type16.getTree());
                    	    char_literal17=(Token)match(input,27,FOLLOW_27_in_enumeration187);  
                    	    stream_27.add(char_literal17);


                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);

                    pushFollow(FOLLOW_value_type_in_enumeration191);
                    value_type18=value_type();

                    state._fsp--;

                    stream_value_type.add(value_type18.getTree());
                    char_literal19=(Token)match(input,25,FOLLOW_25_in_enumeration193);  
                    stream_25.add(char_literal19);



                    // AST REWRITE
                    // elements: value_type, type, ENUM
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 40:51: -> ^( ENUM type ( value_type )+ )
                    {
                        // GuiceyData.g:40:54: ^( ENUM type ( value_type )+ )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_ENUM.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_type.nextTree());
                        if ( !(stream_value_type.hasNext()) ) {
                            throw new RewriteEarlyExitException();
                        }
                        while ( stream_value_type.hasNext() ) {
                            adaptor.addChild(root_1, stream_value_type.nextTree());

                        }
                        stream_value_type.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "enumeration"

    public static class data_entry_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "data_entry"
    // GuiceyData.g:43:1: data_entry : ( entry | ( option )* property -> ^( property ( option )* ) );
    public final GuiceyDataParser.data_entry_return data_entry() throws RecognitionException {
        GuiceyDataParser.data_entry_return retval = new GuiceyDataParser.data_entry_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        GuiceyDataParser.entry_return entry20 = null;

        GuiceyDataParser.option_return option21 = null;

        GuiceyDataParser.property_return property22 = null;


        RewriteRuleSubtreeStream stream_property=new RewriteRuleSubtreeStream(adaptor,"rule property");
        RewriteRuleSubtreeStream stream_option=new RewriteRuleSubtreeStream(adaptor,"rule option");
        try {
            // GuiceyData.g:44:2: ( entry | ( option )* property -> ^( property ( option )* ) )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==DATA||LA7_0==ENUM) ) {
                alt7=1;
            }
            else if ( (LA7_0==ID||LA7_0==TYPE||LA7_0==28||LA7_0==33||(LA7_0>=36 && LA7_0<=37)) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // GuiceyData.g:44:4: entry
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_entry_in_data_entry215);
                    entry20=entry();

                    state._fsp--;

                    adaptor.addChild(root_0, entry20.getTree());

                    }
                    break;
                case 2 :
                    // GuiceyData.g:45:4: ( option )* property
                    {
                    // GuiceyData.g:45:4: ( option )*
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==28) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                    	case 1 :
                    	    // GuiceyData.g:45:4: option
                    	    {
                    	    pushFollow(FOLLOW_option_in_data_entry220);
                    	    option21=option();

                    	    state._fsp--;

                    	    stream_option.add(option21.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop6;
                        }
                    } while (true);

                    pushFollow(FOLLOW_property_in_data_entry223);
                    property22=property();

                    state._fsp--;

                    stream_property.add(property22.getTree());


                    // AST REWRITE
                    // elements: property, option
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 45:21: -> ^( property ( option )* )
                    {
                        // GuiceyData.g:45:24: ^( property ( option )* )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_property.nextNode(), root_1);

                        // GuiceyData.g:45:35: ( option )*
                        while ( stream_option.hasNext() ) {
                            adaptor.addChild(root_1, stream_option.nextTree());

                        }
                        stream_option.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "data_entry"

    public static class option_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "option"
    // GuiceyData.g:48:1: option : ( '[' ID ']' -> ^( OPTION ID ) | '[' ID '(' value ')]' -> ^( OPTION ID value ) | '[' ID '(' ( pair ',' )* pair ')]' -> ^( OPTION ID ( pair )+ ) );
    public final GuiceyDataParser.option_return option() throws RecognitionException {
        GuiceyDataParser.option_return retval = new GuiceyDataParser.option_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal23=null;
        Token ID24=null;
        Token char_literal25=null;
        Token char_literal26=null;
        Token ID27=null;
        Token char_literal28=null;
        Token string_literal30=null;
        Token char_literal31=null;
        Token ID32=null;
        Token char_literal33=null;
        Token char_literal35=null;
        Token string_literal37=null;
        GuiceyDataParser.value_return value29 = null;

        GuiceyDataParser.pair_return pair34 = null;

        GuiceyDataParser.pair_return pair36 = null;


        Object char_literal23_tree=null;
        Object ID24_tree=null;
        Object char_literal25_tree=null;
        Object char_literal26_tree=null;
        Object ID27_tree=null;
        Object char_literal28_tree=null;
        Object string_literal30_tree=null;
        Object char_literal31_tree=null;
        Object ID32_tree=null;
        Object char_literal33_tree=null;
        Object char_literal35_tree=null;
        Object string_literal37_tree=null;
        RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
        RewriteRuleSubtreeStream stream_pair=new RewriteRuleSubtreeStream(adaptor,"rule pair");
        RewriteRuleSubtreeStream stream_value=new RewriteRuleSubtreeStream(adaptor,"rule value");
        try {
            // GuiceyData.g:49:2: ( '[' ID ']' -> ^( OPTION ID ) | '[' ID '(' value ')]' -> ^( OPTION ID value ) | '[' ID '(' ( pair ',' )* pair ')]' -> ^( OPTION ID ( pair )+ ) )
            int alt9=3;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==28) ) {
                int LA9_1 = input.LA(2);

                if ( (LA9_1==ID) ) {
                    int LA9_2 = input.LA(3);

                    if ( (LA9_2==29) ) {
                        alt9=1;
                    }
                    else if ( (LA9_2==30) ) {
                        int LA9_4 = input.LA(4);

                        if ( ((LA9_4>=INT && LA9_4<=STRING)) ) {
                            alt9=2;
                        }
                        else if ( (LA9_4==ID) ) {
                            alt9=3;
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 9, 4, input);

                            throw nvae;
                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 9, 2, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;
            }
            switch (alt9) {
                case 1 :
                    // GuiceyData.g:49:4: '[' ID ']'
                    {
                    char_literal23=(Token)match(input,28,FOLLOW_28_in_option243);  
                    stream_28.add(char_literal23);

                    ID24=(Token)match(input,ID,FOLLOW_ID_in_option245);  
                    stream_ID.add(ID24);

                    char_literal25=(Token)match(input,29,FOLLOW_29_in_option247);  
                    stream_29.add(char_literal25);



                    // AST REWRITE
                    // elements: ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 49:15: -> ^( OPTION ID )
                    {
                        // GuiceyData.g:49:18: ^( OPTION ID )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(OPTION, "OPTION"), root_1);

                        adaptor.addChild(root_1, stream_ID.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // GuiceyData.g:50:4: '[' ID '(' value ')]'
                    {
                    char_literal26=(Token)match(input,28,FOLLOW_28_in_option260);  
                    stream_28.add(char_literal26);

                    ID27=(Token)match(input,ID,FOLLOW_ID_in_option262);  
                    stream_ID.add(ID27);

                    char_literal28=(Token)match(input,30,FOLLOW_30_in_option264);  
                    stream_30.add(char_literal28);

                    pushFollow(FOLLOW_value_in_option266);
                    value29=value();

                    state._fsp--;

                    stream_value.add(value29.getTree());
                    string_literal30=(Token)match(input,31,FOLLOW_31_in_option268);  
                    stream_31.add(string_literal30);



                    // AST REWRITE
                    // elements: value, ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 50:26: -> ^( OPTION ID value )
                    {
                        // GuiceyData.g:50:29: ^( OPTION ID value )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(OPTION, "OPTION"), root_1);

                        adaptor.addChild(root_1, stream_ID.nextNode());
                        adaptor.addChild(root_1, stream_value.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // GuiceyData.g:52:4: '[' ID '(' ( pair ',' )* pair ')]'
                    {
                    char_literal31=(Token)match(input,28,FOLLOW_28_in_option284);  
                    stream_28.add(char_literal31);

                    ID32=(Token)match(input,ID,FOLLOW_ID_in_option286);  
                    stream_ID.add(ID32);

                    char_literal33=(Token)match(input,30,FOLLOW_30_in_option288);  
                    stream_30.add(char_literal33);

                    // GuiceyData.g:52:15: ( pair ',' )*
                    loop8:
                    do {
                        int alt8=2;
                        int LA8_0 = input.LA(1);

                        if ( (LA8_0==ID) ) {
                            int LA8_1 = input.LA(2);

                            if ( (LA8_1==32) ) {
                                int LA8_2 = input.LA(3);
